RESOLVED FIXED52409
[Qt] QtTestBrowser should have a UI setting to prevent loading images.
https://bugs.webkit.org/show_bug.cgi?id=52409
Summary [Qt] QtTestBrowser should have a UI setting to prevent loading images.
Yael
Reported 2011-01-13 16:33:29 PST
It would help a lot when debugging if we could turn off loading images at runtime.
Attachments
Add "Disable Auto Load Images" under Settings Menu (2.55 KB, patch)
2011-01-25 11:57 PST, mansi mithal
tonikitoo: review+
tonikitoo: commit-queue-
Add "Disable Auto Load Images" under Settings Menu (2.54 KB, patch)
2011-01-25 12:52 PST, mansi mithal
no flags
mansi mithal
Comment 1 2011-01-20 12:36:57 PST
I have the patch ready. But since the patch depends on the bug : 52817 , I will submit it after the other one gets checked in.
mansi mithal
Comment 2 2011-01-25 11:57:34 PST
Created attachment 80093 [details] Add "Disable Auto Load Images" under Settings Menu
Early Warning System Bot
Comment 3 2011-01-25 12:23:39 PST
Antonio Gomes
Comment 4 2011-01-25 12:34:48 PST
Comment on attachment 80093 [details] Add "Disable Auto Load Images" under Settings Menu Fix Qt buildbot before landing
Antonio Gomes
Comment 5 2011-01-25 12:35:49 PST
../../../Tools/QtTestBrowser/launcherwindow.cpp: In member function ‘void LauncherWindow::createChrome()’: ../../../Tools/QtTestBrowser/launcherwindow.cpp:372: error: ‘disableAutoLoadImages’ was not declared in this scope distcc[15190] ERROR: compile ../../../Tools/QtTestBrowser/launcherwindow.cpp on cute3.inf.u-szeged.hu/7,lzo failed make[1]: *** [launcherwindow.o] Error 1 make[1]: *** Waiting for unfinished jobs.... make[1]: Leaving directory `/home/webkit/WebKit-qt-ews/WebKitBuild/Release/QtTestBrowser' make: *** [sub-QtTestBrowser-QtTestBrowser-pro-make_default-ordered] Error 2
mansi mithal
Comment 6 2011-01-25 12:52:06 PST
Created attachment 80106 [details] Add "Disable Auto Load Images" under Settings Menu
WebKit Commit Bot
Comment 7 2011-01-25 15:20:07 PST
The commit-queue encountered the following flaky tests while processing attachment 80106 [details]: http/tests/xmlhttprequest/cross-origin-authorization.html bug 52398 (author: ap@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8 2011-01-25 15:20:44 PST
Comment on attachment 80106 [details] Add "Disable Auto Load Images" under Settings Menu Clearing flags on attachment: 80106 Committed r76646: <http://trac.webkit.org/changeset/76646>
WebKit Commit Bot
Comment 9 2011-01-25 15:20:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.