2011-01-25  Mansi Mithal  <mansi.mithal@nokia.com>

Reviewed by Antonio Gomes.

        QtTestBrowser should have a UI Settings to prevent loading images
        https://bugs.webkit.org/show_bug.cgi?id=52409

        Added a new action item named "DisableAutoLoadImages"
        under the "Settings" menu

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::createChrome):
        (LauncherWindow::toggleAutoLoadImages):
        * QtTestBrowser/launcherwindow.h:

Canonical link: https://commits.webkit.org/66872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76646 268f45cc-cd09-0410-ab3c-d52691b4dbfc